--- a/rock-paper-scissors/index.html
+++ b/rock-paper-scissors/index.html
@@ -3,15 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Recipes</title>
+    <title>Rock Paper Scissors</title>
     <script src = 'script.js'></script>
 </head>
 <body>
-    <h1>Recipes</h1>
-    <ul>
-        <li><a href = "recipes/lasagna.html">Lasagna</a></li>
-        <li><a href = 'recipes/shepardspie.html'>Shepherd's Pie</a></li>
-    </ul>
-    
+
 </body>
 </html>
